[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Theme/Main.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Item Storage.gd" type="Script" id=2]

[node name="ItemStorage" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ItemStorage" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="ItemStorage"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="StorageContainer" type="VBoxContainer" parent="ItemStorage"]
margin_left = 192.0
margin_top = 128.0

[node name="StorageLabel" type="Label" parent="ItemStorage/StorageContainer"]
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 75 )
text = "Storage"
align = 1

[node name="StorageScrollContainer" type="ScrollContainer" parent="ItemStorage/StorageContainer"]
margin_top = 79.0
margin_right = 250.0
margin_bottom = 379.0
rect_min_size = Vector2( 250, 300 )
scroll_horizontal_enabled = false

[node name="ItemContainer" type="VBoxContainer" parent="ItemStorage/StorageContainer/StorageScrollContainer"]
custom_constants/separation = 10
alignment = 1

[node name="InventoryContainer" type="VBoxContainer" parent="ItemStorage"]
margin_left = 640.0
margin_top = 128.0
margin_right = 890.0
custom_constants/separation = 10

[node name="IventoryLabel" type="Label" parent="ItemStorage/InventoryContainer"]
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
text = "Inventory
"
align = 1

[node name="Item1" type="HBoxContainer" parent="ItemStorage/InventoryContainer"]
margin_top = 85.0
margin_right = 250.0
margin_bottom = 122.0
custom_constants/separation = 50
alignment = 2

[node name="ItemName" type="Label" parent="ItemStorage/InventoryContainer/Item1"]
margin_left = 53.0
margin_top = 1.0
margin_right = 100.0
margin_bottom = 36.0
text = "Item"

[node name="Button" type="Button" parent="ItemStorage/InventoryContainer/Item1"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )
text = "Drop"

[node name="Item2" type="HBoxContainer" parent="ItemStorage/InventoryContainer"]
margin_top = 132.0
margin_right = 250.0
margin_bottom = 169.0
custom_constants/separation = 50
alignment = 2

[node name="ItemName" type="Label" parent="ItemStorage/InventoryContainer/Item2"]
margin_left = 53.0
margin_top = 1.0
margin_right = 100.0
margin_bottom = 36.0
text = "Item"

[node name="Button" type="Button" parent="ItemStorage/InventoryContainer/Item2"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )
text = "Drop"

[node name="Item3" type="HBoxContainer" parent="ItemStorage/InventoryContainer"]
margin_top = 179.0
margin_right = 250.0
margin_bottom = 216.0
custom_constants/separation = 50
alignment = 2

[node name="ItemName" type="Label" parent="ItemStorage/InventoryContainer/Item3"]
margin_left = 53.0
margin_top = 1.0
margin_right = 100.0
margin_bottom = 36.0
text = "Item"

[node name="Button" type="Button" parent="ItemStorage/InventoryContainer/Item3"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )
text = "Drop"

[node name="CloseButton" type="Button" parent="ItemStorage"]
margin_left = 24.0
margin_top = 16.0
margin_right = 174.0
margin_bottom = 53.0
rect_min_size = Vector2( 150, 0 )
text = "close"

[connection signal="pressed" from="ItemStorage/CloseButton" to="." method="_on_CloseButton_pressed"]
